Primer acercamiento a instanciar las plantas en el Escenario

--- a/TGC.Group/TGC.Group.csproj
+++ b/TGC.Group/TGC.Group.csproj
@@ -73,8 +73,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Characters\Plants\RepeaterDouble.cs" />
     <Compile Include="Characters\Plants\Repeater.cs" />
+    <Compile Include="Characters\Plants\Peashooter.cs" />
     <Compile Include="Characters\Plants\Sunflower.cs" />
     <Compile Include="Characters\Plants\Plant.cs" />
     <Compile Include="Characters\Zombies\ZombieBalde.cs" />
