separo el escenario del ppal

--- a/TGC.Group/TGC.Group.csproj
+++ b/TGC.Group/TGC.Group.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Model\GameModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stage\stage0.cs" />
     <EmbeddedResource Include="Form\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
     </EmbeddedResource>
