--- a/TGC.Group/TGC.Group.csproj
+++ b/TGC.Group/TGC.Group.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Characters\Plants\Repeater.cs" />
     <Compile Include="Characters\Plants\Sunflower.cs" />
     <Compile Include="Characters\Plants\Plant.cs" />
+    <Compile Include="Characters\soles\Sol.cs" />
     <Compile Include="Characters\Zombies\ZombieBalde.cs" />
     <Compile Include="Characters\Zombies\ZombieCono.cs" />
     <Compile Include="Characters\Zombies\Zombie.cs" />
